# ILDbench_gammaZ

./: CMakeLists.txt  README.txt  Readme.md
macros/: 500_test.list  64EScaleUncertainty.C  Ana_eff03.cxx  CalibFactor40.C  CalibFactors.C  Ereso03_t2.cxx  Ereso07.cxx  Ereso07_t1.cxx  Ereso07_t6.cxx  Ereso08.cxx  GammaCalib00photonP.cxx  GammaCalib05_00_42photonP.cxx  GammaCalib05_04photonP.cxx  GammaCalib05_06photonP.cxx  GammaCalib07_01photonP.cxx  GammaCalib07_02photonP.cxx  GammaCalib07_03photonP.cxx  GammaCalib09_01photonP.cxx  GammaCalibMemo.txt  GammaCalibp0_0182.cxx  GammaCalibp0_0185.cxx  GammaCalibp0_018s.cxx  GammaCalibp0_05.cxx  GammaCalibp0_20.cxx  GammaCalibp0_40.cxx  GammaCalibp0_41.cxx  GammaCalibp0_50.cxx  GammaCalibp0_52.cxx  GammaCalibp0_52s.cxx  GammaCalibp0_58.cxx  GammaCalibp0_580.cxx  GammaCalibp0_59.cxx  GammaCalibp0_61.cxx  GammaCalibp0_63.cxx  GammaCalibp0_632.cxx  GammaCalibp0_64.cxx  GammaCalibp0_65.cxx  GammaCalibp0_66.cxx  GammaCalibp0_68.cxx  GammaCalibp0_71.cxx  (+68 more)
scripts/run/: 500_2f.list  500_4f.list  500_test.list~  LCFIPlusConfig  goMarlin  goMerge  goMergepolarized  goMerge~  goSteve  goSteve~  marlin_env_v02-00-02.sh  weights_isolated_electron  weights_isolated_muon  zh_llx.xml  zh_llx.xml~
scripts/run/analysis/: Curve.cxx  Ereso01.cxx  Ereso03.cxx  Ereso04.cxx  Ereso05.cxx  Ereso06.cxx  Ereso07.cxx
scripts/run/benchmark/: Ana01.cxx  GammaCalib07_00photonP.cxx  photonERec4.cxx
scripts/run/compare/: Compare_01_01_dp_p__angle__above100GeV.cxx  Compare_01_02_dp_p__angle__below100GeV.cxx  Compare_02_01_dp_p__p__abscos02.cxx  Compare_02_02_dp_p__p__abscos075.cxx  Compare_02_03_dpt_pt__pt__abscos075.cxx  Compare_03_01_dp_pp__p__abscos02.cxx  Compare_03_02_dpt_ptpt__p__abscos075.cxx  Compare_03_03_dpt_ptpt__pt__abscos075.cxx  Compare_04_00_dpt_pt__p.cxx  Compare_05_00_dpt_pt__p.cxx  Compare_Ereso_Abscos02.cxx  Compare_Ereso_Abscos075.cxx  Compare_Sigma_Angle_Less100GeV.cxx  Compare_Sigma_Angle_More100GeV.cxx  Ereso07_t6_02.cxx  Ereso07_t6_02.cxx~
scripts/run/data_list/: 2f_z_l.list  2f_z_l.mILD_l5_o1_v02.list  2f_z_l.mILD_s5_o1_v02.list
scripts/run/jet/: jetERec0.cxx  jetERec04.cxx  jetERec0A.cxx  jetERec0C.cxx  jetERec1.cxx  jetERec2.cxx  jetERec3.cxx  matrixcalc.cxx  matrixcalc2.cxx  polynomial.cxx  test.c  testj0.cxx  testjcomp.cxx
scripts/run/list/: 2f_z_l.eL.pR.mILD_l5_o1_v02.list  2f_z_l.eL.pR.mILD_s5_o1_v02.list  2f_z_l.eR.pL.mILD_l5_o1_v02.list  2f_z_l.eR.pL.mILD_s5_o1_v02.list
scripts/run/myxml/: rv02-00-01.sv02-00-01.mILD_l5_o1_v02.E500-TDR_ws.I250106.P2f_z_l.eL.pR.n001.d_dstm_10255_0.xml  rv02-00-01.sv02-00-01.mILD_l5_o1_v02.E500-TDR_ws.I250106.P2f_z_l.eL.pR.n001.d_dstm_10255_1.xml  rv02-00-01.sv02-00-01.mILD_l5_o1_v02.E500-TDR_ws.I250106.P2f_z_l.eL.pR.n001.d_dstm_10255_2.xml  rv02-00-01.sv02-00-01.mILD_l5_o1_v02.E500-TDR_ws.I250106.P2f_z_l.eL.pR.n001.d_dstm_10255_3.xml  rv02-00-01.sv02-00-01.mILD_l5_o1_v02.E500-TDR_ws.I250106.P2f_z_l.eL.pR.n001.d_dstm_10255_4.xml  rv02-00-01.sv02-00-01.mILD_l5_o1_v02.E500-TDR_ws.I250106.P2f_z_l.eL.pR.n001.d_dstm_10255_5.xml  rv02-00-01.sv02-00-01.mILD_l5_o1_v02.E500-TDR_ws.I250106.P2f_z_l.eL.pR.n002.d_dstm_10255_10.xml  rv02-00-01.sv02-00-01.mILD_l5_o1_v02.E500-TDR_ws.I250106.P2f_z_l.eL.pR.n002.d_dstm_10255_11.xml  (+39 more)
scripts/run/root_merge.mILD_l5_o1_v02/: .photonERec3.cxx.swo  (+84 more)
source/: CMakeLists.txt
source/include/: PhotonSelectionProcessor.h  Utilities.h  ZHllXAnalysisProcessor.h  ZHllXLeptonSelectionMVAProcessor.h
source/src/: PhotonSelectionProcessor.cc  Utilities.cc  ZHllXAnalysisProcessor.cc  ZHllXLeptonSelectionMVAProcessor.cc  getSigmaP.cc
(+104 files in other folders)
